# codeLedger

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  push-to-github.sh  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx  CodeLedger.tsx  constants.ts  main.tsx  schema.test.ts  schema.ts  storage.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
