[package]
name = "codeledger"
version = "3.0.0"
description = "CodeLedger — developer learning tracker"
authors = ["CodeLedger"]
edition = "2021"

[lib]
name = "codeledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
